--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,20 @@
   		<artifactId>junit</artifactId>
   		<version>4.11</version>
   	</dependency>
-  </dependencies>
+    </dependencies>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.1</version>
+          <configuration>
+            <!-- put your configurations here -->
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
